@@ -1,15 +1,7 @@
 export function returnSetsUnion<T>(set: Set<T>, set2: Set<T>): Set<T> {
-  const result = new Set(Array.from(set));
-  set2.forEach(value => {
-    result.add(value);
-  });
-  return result;
+  return new Set(Array.from(set).concat(Array.from(set2)));
 }
 
 export function returnDifference<T>(list: T[] = [], list2: T[] = []): T[] {
-  const result = new Set(list);
-  list2.forEach(item => {
-    result.delete(item);
-  });
-  return Array.from(result);
+  return list.filter(item => list2.indexOf(item) === -1);
 }
